--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "framer-motion": "^5.5.6",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
@@ -20,7 +21,7 @@
     "eslint": "7",
     "eslint-config-next": "12.0.3",
     "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.12",
     "typescript": "4.4.4"
   }
 }
